Fixed overflow problem, and env

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -136,8 +136,9 @@ body {
 
                     .top {
                         padding: 5px 5px 0;
-                        overflow: auto;
+                        overflow: hidden;
                         position: relative;
+                        min-height: 62px;
 
                         .art {
                             float: left;
@@ -157,6 +158,7 @@ body {
                             right: 5px;
                             top: 0;
                             height: 100%;
+                            overflow: hidden;
 
                             .control {
                                 position: absolute;
